--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
     "formik": "^2.4.3",
+    "google-map-react": "^2.2.1",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
