--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
     "razorpay": "^2.9.1",
+    "socket.io": "^4.7.2",
     "twilio": "^4.14.1"
   },
   "name": "server",
