--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
@@ -20,7 +21,9 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
+    "peerjs": "^1.5.0",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
@@ -30,9 +33,11 @@
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "recharts": "^2.8.0",
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.7",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
