--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zegocloud/zego-uikit-prebuilt": "^1.8.11",
     "apexcharts": "^3.42.0",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
@@ -37,6 +38,7 @@
     "redux": "^4.2.1",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.7",
+    "timeago.js": "^4.0.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
