--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mapbox/search-js-react": "^1.0.0-beta.18",
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
     "@react-oauth/google": "^0.11.1",
