--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "redux": "^4.2.1",
