--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-error-boundary": "^4.0.11",
     "react-razorpay": "^2.0.1",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
