--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,7 @@
     "react-dropzone": "^14.2.3",
     "react-error-boundary": "^4.0.11",
     "react-razorpay": "^2.0.1",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
@@ -37,6 +37,7 @@
     "react-toastify": "^9.1.3",
     "recharts": "^2.8.0",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.2",
     "styled-components": "^6.0.7",
     "timeago.js": "^4.0.2",
